🐊🛀 Checkpoint ./index.html:111231/1211

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-    <h1>Hi there!</h1>
-    <p>
-      I'm your cool new webpage. Made with 
-      <a href="https://www.glitch.com">Glitch</a>
-    </p>
+    <img src="http://via.placeholder.com/100x100"
+         srcset="http://via.placeholder.com/100x100 200w,
+                 http://via.placeholder.com/200x200 400w,
+                 http://via.placeholder.com/400x400 800w,
+                 http://via.placeholder.com/800x800"/>
   </body>
 </html>
