🏝😅 Checkpoint ./index.html:111231/38

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-    <img src="http://via.placeholder.com/100x100"
-         srcset="http://via.placeholder.com/100x100 200w,
-                 http://via.placeholder.com/200x200 400w,
-                 http://via.placeholder.com/400x400 800w,
-                 http://via.placeholder.com/800x800"/>
+    <img src="https://via.placeholder.com/100x100"
+         srcset="https://via.placeholder.com/100x100 100w,
+                 https://via.placeholder.com/200x200 200w,
+                 https://via.placeholder.com/400x400 400w,
+                 https://via.placeholder.com/800x800 800w"
+         sizes="50vw"/>
   </body>
 </html>
