--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-    <img src="https://via.placeholder.com/100x100"
-         srcset="https://via.placeholder.com/100x100 100w,
-                 https://via.placeholder.com/200x200 200w,
-                 https://via.placeholder.com/400x400 400w,
-                 https://via.placeholder.com/800x800 800w"
-         sizes="50vw"/>
+    <p>
+      setting debugger to undefined...
+    </p>
   </body>
 </html>
