👵😬 Checkpoint ./index.html:111231/432 ./styles.css:111231/42

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
+    <h1>Workspaces Demo</h1>
     <p>
-      setting debugger to undefined...
+      This is the demo page for the official <span id="devtools">Chrome DevTools</span> tutorial on setting up and using Workspaces.
+    </p>
+    <p>
+      See <a href="https://developers.google.com/web/tools/chrome-devtools/workspaces">Save Changes To Disk With Workspaces</a>
+      for instructions.
     </p>
   </body>
 </html>
