--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>Hello!</title>
@@ -11,7 +11,7 @@
   <body>
     <h1>Workspaces Demo</h1>
     <p>
-      This is the demo page for the official <span id="devtools">Chrome DevTools</span> tutorial on setting up and using Workspaces.
+      This is the demo page for the official <span>Chrome DevTools</span> tutorial on setting up and using Workspaces.
     </p>
     <p>
       See <a href="https://developers.google.com/web/tools/chrome-devtools/workspaces">Save Changes To Disk With Workspaces</a>
