testing array functions

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
   <body>
     <h1>Workspaces Demo</h1>
     <p>
-      This is the demo page for the official <span>Chrome DevTools</span> tutorial on setting up and using Workspaces.
+      Test Javascript when clicking button.
     </p>
-    <p>
-      See <a href="https://developers.google.com/web/tools/chrome-devtools/workspaces">Save Changes To Disk With Workspaces</a>
-      for instructions.
-    </p>
+
+
+    <button type="button" onclick="onClickEvent()">Click to run JS</button>
   </body>
 </html>
